--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -4,7 +4,7 @@
       "command": "srb",
       "args": ["tc", "--typed", "true", "--enable-all-experimental-lsp-features", "--lsp", "--disable-watchman"],
       "filetypes": ["ruby"],
-      "rootPatterns": ["sorbet/config"],
+      "rootPatterns": ["sorbet/config", "components", "test", "lib", "gems", "config", "db"],
       "initializationOptions": {},
       "settings": {}
     }
